fix bug on mobile devices

--- a/src/components/Confetti/Confetti.scss
+++ b/src/components/Confetti/Confetti.scss
@@ -1,7 +1,7 @@
 .confetti-container {
   position: relative;
   width: 100%;
-  height: 366px;
+  height: 416px;
 }
 
 .confetti {
